Lower complexity of getPredicates